<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Habit App</string>
    <string name="whats_your_name">Hi, what\'s your name?</string>
    <string name="name">Name</string>
    <string name="daily_goals">Daily Goals Left</string>
    <string name="tasks_completed">Tasks Completed</string>
    <string name="ongoing_tasks">Ongoing Tasks</string>
    <string name="welcome_screen">Welcome!</string>
    <string name="about_app">This app let\'s you track your
        daily goals, manage your tasks and helps you build habits.</string>
    <string name="tasks">Tasks</string>
    <string name="change_your_name">Change your name</string>
    <string name="enter">Enter</string>
    <string name="add_task">Add new task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_habit">Add new habit</string>
    <string name="title_task">Task</string>
    <string name="title_habit">Habit</string>
    <string name="details">Details</string>
    <string name="due_date">Due date</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="new_habit">New Habit</string>
    <string name="set_time_for_habit">Time of day</string>
    <string name="notes">Notes</string>
    <string name="start_typing">Start typing</string>
    <string name="yes">yes</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="task_delete_confirmation">Are you sure you want to delete this task?</string>
    <string name="habit_delete_confirmation">Are you sure you want to delete this habit?</string>
    <string name="hide_completed">Hide Completed</string>
    <string name="all_tasks">All Tasks</string>
</resources>