<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/new_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="60dp"
        android:text="@string/new_task"
        app:layout_constraintEnd_toEndOf="@id/add_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_title"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/title_task"
        android:inputType="text"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/light_grey3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_task"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/set_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:drawableEnd="@drawable/ic_calendar"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/due_date"
        android:inputType="date"
        android:focusable="false"
        android:longClickable="false"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/light_grey3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/add_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_details"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/details"
        android:inputType="textMultiLine"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/light_grey3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_due_date"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:background="@color/transparent"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_details"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>