<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@id/whats_your_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:autofillHints=""
        android:background="@color/transparent"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:keepScreenOn="false"
        android:maxLength="15"
        android:padding="20dp"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/light_grey3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whats_your_name"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/whats_your_name"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/whats_your_name"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/roboto"
        android:text="@string/enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>